Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -233,7 +233,6 @@ body {
 			border-top: 2px solid fade(@color-swatch5, 25%);
 			border-bottom: 2px solid fade(@color-swatch5, 25%);
 			margin: 30px auto 20px;
-			text-align: center;
 			@media @tablet {
 				/* Hidden until nav icon is clicked */
 				display: none;
